--- a/templates/created_services.html
+++ b/templates/created_services.html
@@ -5,6 +5,8 @@
   <title>HTML5</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <link href="static/css/created_services.css" type="text/css" rel="stylesheet">
+
   <style type="text/css">
     body {
 
