--- a/templates/messanger.html
+++ b/templates/messanger.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link href="static/css/messanger.css" type="text/css" rel="stylesheet"
+<link href="static/css/messanger.css" type="text/css" rel="stylesheet">
 
 </head>
 
