--- a/templates/header.html
+++ b/templates/header.html
@@ -11,3 +11,6 @@
 
 <!-- Custom CSS -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
