--- a/templates/service_create.html
+++ b/templates/service_create.html
@@ -115,9 +115,48 @@
 				<div class="wrapper-tab mt-4 mb-3">
 					<div class="jumbotron text-left">
 						<h1 class="display-4">Step 4/4:</h1>
-						<p class="lead">Select a date.</p>
+						<p class="lead">Select date and time.</p>
 					</div>
-
+					<div class="container row">
+						<div class="mr-3">
+							<div class="form-group">
+								<label>Select working day</label>
+								<div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+								</div>
+							</div>
+						</div>
+						<div class="ml-3 mr-5">
+							<div class="">
+								<div class="form-group">
+									<label>Select work start time</label>
+									<div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"/>
+										<div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fa fa-clock-o"></i></div>
+										</div>
+									</div>
+								</div>
+								<div class="form-group">
+									<label>Select work end time</label>
+									<div class="input-group date" id="datetimepicker3" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker3"/>
+										<div class="input-group-append" data-target="#datetimepicker3" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fa fa-clock-o"></i></div>
+										</div>
+									</div>
+								</div>
+								<div class="form-group">
+									<label>How much time it lasts</label>
+									<div class="input-group">
+										<input type="text" class="form-control"/>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="ml-5">
+							<span>Here generated timeslots</span>
+						</div>
+					</div>
 					<div class="d-flex">
 						<button class="btn btn-lg btn-secondary btn-block btnPrevious mt-3 mr-1 text-uppercase" type="button"><< PREVIOUS STEP</button>
 						<button class="btn btn-lg btn-secondary btn-block mt-3 text-uppercase" type="submit">FINISH</button>
@@ -127,4 +166,19 @@
 		</div>
 	</form>
 </div>
+<script type="text/javascript">
+	$(function () {
+		$('#datetimepicker1').datetimepicker({
+			inline: true,
+			sideBySide: true,
+			format: 'L'
+		});
+		$('#datetimepicker2').datetimepicker({
+            format: 'LT'
+        });
+		$('#datetimepicker3').datetimepicker({
+            format: 'LT'
+        });
+	});
+</script>
 {% endblock %}
