--- a/templates/service_create.html
+++ b/templates/service_create.html
@@ -165,6 +165,10 @@
 							<button type="button" name="button" class="btn btn-outline-secondary btn-block"  onclick="saveWorkHours()" style="display:block;">Save my work hours</button>
 						</div>
 
+						<div>
+							<button type="button" name="button" class="btn btn-outline-secondary btn-block"  onclick="register_service()" style="display:block;">Check func</button>
+						</div>
+
 					</div>
 					<div class="d-flex">
 						<button class="btn btn-lg btn-secondary btn-block btnPrevious mt-3 mr-1 text-uppercase" type="button"><< PREVIOUS STEP</button>
