--- a/templates/service_create.html
+++ b/templates/service_create.html
@@ -117,6 +117,12 @@
 						<h1 class="display-4">Step 4/4:</h1>
 						<p class="lead">Select date and time.</p>
 					</div>
+					<div  align="center" >
+						<p id= "show_info" style = "display:none;"></p>
+			 	 	</div>
+					<div>
+						<button type="button" id="save_work_hours" class="btn btn-outline-secondary btn-block"  onclick="saveWorkHours()" style="display:none;">Save my work hours</button>
+					</div>
 					<div class="container row">
 						<div class="mr-3">
 							<div class="form-group">
@@ -147,8 +153,11 @@
 								</div>
 								<div class="form-group">
 									<label>How much time it lasts</label>
-									<div class="input-group">
-										<input id="range_time" type="text" class="form-control"/>
+									<div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+										<input type="text" class="form-control datetimepicker-input" id = "range_time" data-target="#datetimepicker4"/>
+										<div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
+											<div class="input-group-text"><i class="fa fa-clock-o"></i></div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -161,18 +170,11 @@
 							<div id="timeslots"></div>
 						</div>
 
-						<div>
-							<button type="button" name="button" class="btn btn-outline-secondary btn-block"  onclick="saveWorkHours()" style="display:block;">Save my work hours</button>
-						</div>
-
-						<div>
-							<button type="button" name="button" class="btn btn-outline-secondary btn-block"  onclick="register_service()" style="display:block;">Check func</button>
-						</div>
 
 					</div>
 					<div class="d-flex">
 						<button class="btn btn-lg btn-secondary btn-block btnPrevious mt-3 mr-1 text-uppercase" type="button"><< PREVIOUS STEP</button>
-						<button class="btn btn-lg btn-secondary btn-block mt-3 text-uppercase" type="submit">FINISH</button>
+						<button class="btn btn-lg btn-secondary btn-block mt-3 text-uppercase" type="button" onclick="register_service()">Create</button>
 					</div>
 				</div>
 			</div>
@@ -187,10 +189,13 @@
 			format: 'L'
 		});
 		$('#datetimepicker2').datetimepicker({
-            format: 'LT'
+            format: 'hh:mm'
         });
 		$('#datetimepicker3').datetimepicker({
-            format: 'LT'
+            format: 'hh:mm'
+        });
+		$('#datetimepicker4').datetimepicker({
+            format: 'h:mm'
         });
 	});
 </script>
