--- a/templates/service.html
+++ b/templates/service.html
@@ -1,126 +1,72 @@
-<html>
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  <style type="text/css">
-    body {
-
-      margin: 10%;
-    }
-
-
-    </style>
-
-
- </head>
-
-
-
-
- <body>
-
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-     <a class="navbar-brand" href="#">TimePicker</a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-       <span class="navbar-toggler-icon"></span>
-     </button>
-     <div class="collapse navbar-collapse" id="navbarNav">
-       <ul class="navbar-nav">
-         <li class="nav-item active">
-           <a class="nav-link" href="/mainpage">Search! <span class="sr-only">(current)</span></a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="/create_service">Create own service</a>
-         </li>
-         <li class="nav-item">
-				 	<a class="nav-link" href="/created_services">Your services</a>
-				 </li>
-				 <li class="nav-item">
-					<a class="nav-link" href="/messanger?id=0">Chats</a>
-				 </li>
-         <li class="nav-item">
-           <a class="nav-link" href="/settings">Settings</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="/logout">Logout</a>
-         </li>
-       </ul>
-     </div>
-   </nav>
-
-   <div class="alert alert-secondary" role="alert" align="center">
-    {% if s_name %}
-      <p>{{s_name}}</p>
+{% extends "base.html" %}
+{% block content %}
+<div class="content-section" style="margin-left: 10%; margin-right: 10%;">
+  <h3 class="card-title">Your services</h3>
+  <hr>
+  <div class="row d-flex justify-content-between">
+    {% if services %}
+      {% for service in services %}
+        <div class="card col-auto mb-3" style="max-width: 540px;">
+          <div class="row no-gutters">
+            <div class="card-body col-4">
+              <img src="{{ url_for('static', filename=logo_folder+service['service_logo']) }}" class="card-img" alt="...">
+            </div>
+            <div class="col-8">
+              <div class="card-body">
+                <h5 class="card-title">{{ service['service_name'] }}</h5>
+                <p class="card-text">{{ service['addit_info'] }}</p>
+                <p class="card-text">Master: {{ service['master_name'] }}</p>
+                <p class="card-text">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Service</th>
+                        <th scope="col">Price</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for service, price in service['services_prices'].items() %}
+                      <tr>
+                        <th scope="row">#</th>
+                        <td>{{service}}</td>
+                        <td>{{price}}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table></p>
+                <p class="card-text">Time slots:
+                  //TODO
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        {% for date in service['dates'].keys() %}
+                        <th scope="col">{{date}}</th>
+                        {% endfor %}
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for timeslot in service['dates'].values() %}
+                      <tr>
+                        <th scope="row">#</th>
+                        <td>{{timeslot}}</td>
+                      </tr>
+                      {% endfor %}
+                    </tbody>
+                  {{ service['dates'] }}</table></p>
+                <p class="card-text"><small class="text-muted">Distance from you: 1.5 km.</small></p>
+                <p class="card-text"><small class="text-muted">Middle price: 1$</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
     {% else %}
-      <p>Oops.. There is no name of service</p>
+      <div class="card-body">
+        <h5 class="card-title">Seems like you didn't create any services yet!</h5>
+      </div>
     {% endif %}
-   </div>
-
-   <div class="alert alert-secondary" role="alert" align="center">
-    {% if s_info %}
-      <p>{{s_info}}</p>
-    {% else %}
-      <p>Oops.. There is no name of service</p>
-    {% endif %}
-   </div>
-
-  <button type="button" class="btn btn-outline-secondary btn-block" onclick="window.location.href='/master_address?login={{master}}'">Show map</button>
-  <button type="button" class="btn btn-outline-secondary btn-block" onclick="window.location.href='/chat_with?receiver={{master}}'">Contact with master</button>
-  <button type="button" class="btn btn-outline-secondary btn-block" onclick="window.location.href='/book_time?login={{master}}'">Reserve your time</button>
-
-
-
-
-
-
-
-
-
-
-  <div class="time_picker">
-    <h2>Time picker for {{date}}</h2>
-    <table>
-    {% for hour in hours %}
-    <tr>
-        <th>
-          <p>{{ hour }}</p>
-        </th>
-        <th>
-          <button>select</button>
-        </th>
-        </tr>
-    {% endfor %}
-    </table>
   </div>
-
-
-
-
-  </body>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-  <script type="text/javascript">
-
-
-    day_select.onclick = function(){
-      var working_dates = ["hi"]
-      var check = document.getElementsByClassName("date");
-      for (var i = 0; i < check.length; i++) {
-          working_dates.push(check[i].innerText);
-
-      }
-      console.log(working_dates);
-      let response = fetch('http://' + document.domain + ':' + location.port+'/service',{
-        method: 'POST',
-        headers: {
-                  'Content-Type': 'application/json;charset=utf-8'
-                  },
-        body: JSON.stringify(working_dates)
-      });
-    }
-
-
-  </script>
-</html>
+</div>
+{% endblock %}
