service_id_sent

--- a/templates/booking_request.html
+++ b/templates/booking_request.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="content-section" style="margin-left: 10%; margin-right: 10%;">
-  <h3 class="card-title">Your services</h3>
+  <h3 class="card-title">Your booking</h3>
   <hr>
   <div class="row d-flex justify-content-between">
     {% if services %}
